<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leydi.indicemasacorporal.MainActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </ScrollView>

    <GridLayout
        android:layout_height="174dp"
        android:layout_width="match_parent"
        android:layout_weight="0.95">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:id="@+id/etPeso"
            android:inputType="number"
            android:layout_row="0"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etAltura"
            android:inputType="numberDecimal"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:text="@string/altura"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="24sp"
            android:layout_weight="0.25"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular"
            android:layout_row="2"
            android:layout_column="1"
            android:textStyle="normal|bold"
            android:textSize="24sp" />

        <TextView
            android:text="@string/resultado"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultado"
            android:textSize="24sp"
            android:layout_row="3"
            android:layout_column="1"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_row="0"
            android:layout_column="0" />


    </GridLayout>

    <Button
        android:text="@string/acercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="acercade"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="textStart" />

    <Button
        android:text="Grabar"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:id="@+id/grabar"
        android:layout_row="4"
        android:layout_column="1"
        android:onClick="grabar" />

    <Button
        android:text="Historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnH"
        android:onClick="btnH" />


</LinearLayout>
